# epicteller

./: .gitignore  .pyproject.toml.un~  .travis.yml  Dockerfile  LICENSE  Pipfile  Procfile  README.md  autoapp.py  docker-compose.yml  pyproject.toml  supervisord.conf
.github/workflows/: build_ghcr.yml  build_push.yml
database/: epicteller.sql
database/schema/: epicteller.sql
epicteller/bot/: __init__.py  main.py
epicteller/bot/actor/: call_action.py  combat.py  dump.py
epicteller/bot/controller/: base.py  combat.py  message.py
epicteller/bot/plugin/: __init__.py  combat.py  dice.py  message.py  misc.py  predict.py  progress.py
epicteller/core/: config.py  kafka.py  log.py  mysql.py  redis.py  tables.py
epicteller/core/controller/: campaign.py  character.py  combat.py  credential.py  dice.py  episode.py  member.py  message.py  room.py
epicteller/core/dao/: campaign.py  character.py  combat.py  credential.py  dice.py  episode.py  member.py  message.py  room.py
epicteller/core/error/: __init__.py  base.py  combat.py  episode.py  message.py
epicteller/core/model/: campaign.py  character.py  combat.py  credential.py  dice.py  episode.py  member.py  message.py  room.py
epicteller/core/models/: campaign.py  character.py  dice.py  episode.py  member.py  message.py  room.py
epicteller/core/util/: seq.py  (+9 more)
epicteller/web/: __init__.py  app.py  main.py
resource/infra/: docker-compose.yml
scripts/: attach_image_size.py  migrate_dndlog.py  replace_eol.py
shell_scripts/: supervisord_entrypoint.sh
supervisord_programs/: bot.conf  gunicorn.conf  web.conf
(+40 files in other folders)
